fix text alignment of multiple authors

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   width: 50%;
 }
 
